# sanitary

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  README.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
docs/: index.md  reference.md  requirements.txt
sanitary/: __init__.py  hashing.py
tests/: test_sanitize_fields.py  test_sanitize_fields_with_callable.py  test_sanitize_text.py  test_structlog.py  test_utils.py
