[project]
name = "sanitary"
version = "0.1.0"
description = "Utility to remove or replace sensitive data from complex structures."
readme = "docs/index.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = []
authors = [
  { name = "Berislav Lopac", email = "berislav@lopac.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
repository = "https://github.com/berislavlopac/sanitary"
issues = "https://github.com/berislavlopac/sanitary/issues"
documentation = "https://sanitary.readthedocs.io"

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkapi",
  "mkdocs-material",
  "pymdown-extensions",
  "jinja2 >= 3.1.3",
]

[dependency-groups]
dev = [
    "ruff",
    "pydocstyle[toml]",
    "deptry>=0.23.0",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-spec",
    "mypy",
    "structlog",
    "tox>=4.26.0",
    "tox-uv>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 96
output-format = "grouped"

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/settings/#lint
select = [  # see https://docs.astral.sh/ruff/rules/
    "E4", "E7", "E9",  # basic pycodestyle rules
    "F",        # Pyflakes rules
    "W",        # pycodestyle warnings
    "C90",      # McCabe complexity
    "N",        # PEP8 naming conventions
    "I",        # import statements linting and formatting
    "PLR",      # Pylint refactoring recommendations
    "PTH",      # recommends to use pathlib instead of os.path
    "UP",       # pyupgrade suggestions
    "BLE",      # locates blind exception capture
    "B",        # locates possible bugs and design problems
    "A",        # locates shadowing of builtin names
    "C4",       # locates possible issues with comprehensions
    "DTZ",      # locates incorrect use of timezone information
    "PIE",      # miscellaneous linting rules
    "TRY",      # locates potential exception handling antipatterns
    "PERF",     # locates potential performance issues
    "RUF",      # various Ruff-specific linting rules
    "S",        # various insecure code, with bandit
    "ERA",      # eradicate: commented-out code
]
external = [
    "F841",     # vulture uses this code for ignoring unused names
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",     # allow unused imports
    "F403",     # allow `import *`
]
"tests/*" = [
    "PLR0913",  # unlimited function arguments
    "S101",     # allow asserts
    "S105",     # allow harcoded passwords
    "N802",     # allow variable case in test names
    "PLR2004",  # allow magic values in comparisons
]

[tool.ruff.format]
# see https://docs.astral.sh/ruff/settings/#format

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

[tool.coverage.run]
source = [ "sanitary/", ]
omit = [ "*/tests/*", "src/tests/*", ]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 90
exclude_lines = ["pragma: no cover", "@abstract", "if TYPE_CHECKING:"]

[tool.mypy]
mypy_path = "sanitary/"
ignore_missing_imports = true

[tool.pydocstyle]
add-ignore = "D105, D107, D212, D401"
convention = "google"
match-dir = "(?!tests).*"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "mkdocs",
    "mkapi",
    "mkdocs-material",
    "pymdown-extensions",
    "jinja2",
]
